canvas-components develop v0.0.2 add Img

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React-Canvas Example</title>
+    <title>React-Canvas-Components Example v0.0.2</title>
 </head>
 <body>    
     <noscript>You need to enable JavaScript to run this app.</noscript>
